<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_in_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        >
        <TextView
            style="@style/SignButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button_text"
            android:textSize="32sp"
            />
    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_email_layout"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/start_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_toolbar"
        android:hint="@string/confirm_email_text"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password_layout"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/greeting_text_size"
        app:layout_constraintStart_toStartOf="@+id/start_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email_layout"
        android:hint="@string/password_text"
        tools:ignore="MissingClass,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <Button
        android:id="@+id/sign_in_confirm_button"
        style="@style/SignButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/sign_up_background"
        android:text="@string/sign_in_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password_layout"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/sign_in_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_confirm_button"
        android:text="@string/for_no_account"
        android:textSize="20sp"
        style="@style/SignTextViewStyle"/>
    <Button
        android:id="@+id/sign_up_for_no_account_button"
        style="@style/SignButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_text_view"
        android:background="@drawable/sign_up_background"
        android:text="@string/sign_up_button_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/sign_in_congrats_text_view"
        style="@style/SignTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/congrats_text"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_for_no_account_button" />

</androidx.constraintlayout.widget.ConstraintLayout>